2011-02-15  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-inspect.el: fixes suggested by `checkdoc', added Commentary
	sections

	* soap-client.el (*soap-current-wsdl*): renamed from
	`*current-wsdl*'
	(soap-invoke): changed url-package-name to "soap-client.el"

2011-02-14  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el: added commentary section
	(soap-load-wsdl-from-url): doc update

2011-02-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el: fixes suggested by `checkdoc' and spelling fixes

2011-02-07  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el: 53 some fixes suggested by `checkdoc'

2011-02-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-parse-wsdl, soap-parse-schema)
	(soap-parse-schema-element, soap-parse-complex-type)
	(soap-parse-sequence, soap-parse-complex-type-complex-content)
	(soap-parse-message, soap-parse-port-type, soap-parse-operation)
	(soap-parse-binding, soap-parse-envelope, soap-encode-value): add
	a helpful message to the assert calls

2011-01-03  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-xml-get-children1)
	(soap-xml-get-attribute-or-nil1): use `ignore-errors' on
	`soap-l2wk'

2010-12-06  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-l2wk): comment out warning about not
	finding a well known namespace, it seems to happen too oftern for
	benign cases...
	(soap-xml-get-children1, soap-xml-get-attribute-or-nil1): install
	a local namespace table via `soap-with-local-xmlns', it seems to
	be needed for some responses.
	(soap-resolve-references-for-operation): always try to intern
	elements in the PARAMETER-ORDER list.
	(soap-parse-response): replace assert with an error message
	(soap-with-local-xmlns): don't change `*soap-default-xmlns*'
	unless we have a non nil value

2010-12-05  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-l2wk): don't report an error if there's no