@@ -1,3 +1,10 @@
+2011-02-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-well-known-xmlns, soap-local-xmlns)
+	(soap-default-xmlns, soap-multi-refs, soap-decoded-multi-refs)
+	(soap-current-wsdl, soap-encoded-namespaces): rename CL-style
+	*...* variables.
+
 2011-02-15  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-inspect.el: fixes suggested by `checkdoc', added Commentary
